# thinkers-chat

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  TEST_PLAN.md
.claude/: build-prompt.md  settings.json
.claude/sessions/: 2024-12-17-session-summary.md
.github/workflows/: ci.yml  claude-breakdown.yml  claude-cicd-fix.yml  claude-triage.yml  claude-work.yml  close-issues.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 18932bd079f0_initial_schema_with_users_and_auth.py  815724a57297_add_display_name_to_users.py  c1a2b3d4e5f6_add_spend_limit_to_users.py  caf3be3174e9_add_spend_tracking_tables.py
backend/app/: __init__.py  exceptions.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  conversations.py  sessions.py  spend.py  test_helpers.py  thinkers.py  websocket.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  base.py  conversation.py  message.py  session.py  spend.py  thinker.py  user.py
backend/app/schemas/: __init__.py  auth.py  conversation.py  message.py  session.py  spend.py  thinker.py
backend/app/services/: __init__.py  spend.py  thinker.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_billing_error_endpoint.py  test_billing_error_integration.py  test_config.py  test_main.py  test_models.py  test_spend_service.py  test_thinker_service.py  test_trigger_error_endpoint.py  test_websocket.py
frontend/: .env.local.example  Dockerfile  jest.config.js  jest.setup.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  railway.json
frontend/e2e/: IOS_TESTING.md  admin.spec.ts  billing-error.spec.ts  chat.spec.ts  home.spec.ts  homepage.spec.ts  issue-88-refresh-thinker.spec.ts  mobile-header.spec.ts  mobile-ios.spec.ts  new-conversation.spec.ts  persistence.spec.ts  test-utils.ts
frontend/src/: middleware.ts
frontend/src/__tests__/: middleware.test.ts  page.test.tsx
frontend/src/app/: globals.css  ios-safari-fixes.css  layout.tsx  page.tsx
scripts/: deploy-railway.sh  dev.sh  railway-setup.sh  setup.sh  test-all.sh
(+43 files in other folders)
